--- a/Week1/to-do-list-Hanbing/src/components/navBar/NavBar.css
+++ b/Week1/to-do-list-Hanbing/src/components/navBar/NavBar.css
@@ -1,10 +1,13 @@
 
 .headerBox{
+    box-sizing: border-box;
     width: 100%;
     height:14%;
     position: fixed;
     top:0;
     left:0;
+    padding-top:1rem;
+
     display:flex;
     justify-content: baseline;
     background-image: radial-gradient(circle at 0px 0px, #0276B5 5%, #092A48 60%);
@@ -24,28 +27,37 @@
 
 
 .searchBarContainer{
-    width: 60%;
+    width: 50%;
     height: 80%;
     margin: 1rem;
     box-sizing: border-box;
-    border: 0.1rem solid white;
+
     padding-left: 3rem; 
 }
 
-.AddItemContainer{
+.addItemContainer{
     width: 10%;
     height: 80%;
     margin: 1rem;
     box-sizing: border-box;
-    border: 0.1rem solid white;
+
     padding: 1rem; 
 
 }
-.LoginButtonContainer{
+.loginButtonContainer{
     width: 10%;
     height: 80%;
     margin: 1rem;
     box-sizing: border-box;
-    border: 0.1rem solid white;
+
+
+
+}
+.registerButtonContainer{
+    width: 10%;
+    height: 80%;
+    margin: 1rem;
+    box-sizing: border-box;
+
 
 }
